Completed course up to Maps & LRU

--- a/.jest.config.json
+++ b/.jest.config.json
@@ -3,7 +3,8 @@
     "moduleNameMapper": {
         "@code/(.*)": [
             "<rootDir>/src/day1/$1",
-            "<rootDir>/src/day2/$1"
+            "<rootDir>/src/day2/$1",
+            "<rootDir>/src/day3/$1"
         ]
     },
     "preset": "ts-jest"
